01-benefits-iac/vpc.tf
#1. Plan
#2. Apply
#3. Destroy

terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 5.0"
    }
  }
}

provider "aws" {
    region = "us-east-1"
  
}

resource "aws_vpc" "shaans_demo_vpc" {
    cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "shaans_public_subnet" {
  vpc_id = aws_vpc.shaans_demo_vpc.id
  cidr_block = "10.0.0.0/24"

}

resource "aws_subnet" "shaans_private_subnet" {
  vpc_id = aws_vpc.shaans_demo_vpc.id
  cidr_block = "10.0.1.0/24"
}

resource "aws_internet_gateway" "shaans_igw" {
    vpc_id = aws_vpc.shaans_demo_vpc.id
}

resource "aws_route_table" "shaans_public_rtb" {
  vpc_id = aws_vpc.shaans_demo_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.shaans_igw.id
  }
}

resource "aws_route_table_association" "shaans_public_rtb_association" {
 subnet_id = aws_subnet.public_subnet.id
 route_table_id = aws_route_table.shaans_public_rtb.id
  
}
